maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:8: error: not found: value isFacingWall
      case (a == 1 && !isFacingWall())=> forward() 
                       ^RandomMouseMaze:8: error: not found: value &&
      case (a == 1 && !isFacingWall())=> forward() 
                   ^RandomMouseMaze:8: error: not found: value ==
      case (a == 1 && !isFacingWall())=> forward() 
              ^RandomMouseMaze:8: error: not found: value !
      case (a == 1 && !isFacingWall())=> forward() 
                      ^RandomMouseMaze:8: error: type mismatch;
 found   : Unit
 required: Int
      case (a == 1 && !isFacingWall())=> forward() 
                                                ^RandomMouseMaze:9: error: not found: value ==
      case a == 2 => right()
             ^RandomMouseMaze:9: error: type mismatch;
 found   : Unit
 required: Int
      case a == 2 => right()
                          ^RandomMouseMaze:10: error: not found: value ==
      case a == 3 => left()
             ^RandomMouseMaze:10: error: type mismatch;
 found   : Unit
 required: Int
      case a == 3 => left()
                         ^RandomMouseMaze:13: error: not found: value takeBaggle
  takeBaggle()
  ^